--- a/music_server/pom.xml
+++ b/music_server/pom.xml
@@ -53,6 +53,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.example.music_server.MusicServerApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
