--- a/music_server/src/main/resources/application.properties
+++ b/music_server/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/music?serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://175.178.236.159:3306/tp_music?useUnicode=ture&characterEncoding=utf8&\
+  &useSSL=false&serverTimezone=Asia/Shanghai
+
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-mybatis.typeAliasesPackage=com.example.yin.domain
+mybatis.typeAliasesPackage=com.example.music_server.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
