--story=1018392 --user=陈佳祥 歌手模块 https://www.tapd.cn/41153697/s/1057104

--- a/music_server/src/main/resources/application.properties
+++ b/music_server/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.devtools.restart.exclude=WEB-INF/**
 
 # ??CONDITIONS EVALUATION REPORT??????????????
 logging.level.org.springframework.boot.autoconfigure=ERROR
+
+
+logging.file.name=/path/to/log/file.log
