--- a/music_server/pom.xml
+++ b/music_server/pom.xml
@@ -55,6 +55,18 @@
 			<version>3.5.2</version>
 		</dependency>
 
+		<!-- Log4j -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-log4j</artifactId>
+			<version>1.3.8.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-to-slf4j</artifactId>
+			<version>2.8.2</version>
+		</dependency>
 
 		<!--		<dependency>-->
 <!--			<groupId>com.mysql</groupId>-->
